--- a/css/register.css
+++ b/css/register.css
@@ -1,5 +1,6 @@
 *{
-    margin: 0vh;
+    margin:0;
+    padding: 0;
 }
 .login {
     background: linear-gradient(#21C08B, #AB88FF);
@@ -15,7 +16,7 @@
     border: 2px solid white;
     border-radius: 40px;
     color: white;
-    padding: 60px 68px 40px;
+    padding:  0px 60px 68px 40px;
     min-height: 700px;
     width: 300px;
     display: flex;
@@ -32,8 +33,8 @@
   .login__container--remember-me {
     color: white;
     display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
+    justify-content: center;
+    margin-top:80px;
   }
   .login__container--remember-me a {
     color: white;
@@ -102,7 +103,7 @@ margin: 10px 0px;
 .footer{
     display: flex;
     align-items: center;
-    height: 100px;
+    height: 120px;
     width: 100%;
     background-color: #AB88FF;
     
@@ -119,18 +120,18 @@ margin: 10px 0px;
 .footer a:hover{
     text-decoration:underline ;
 }
- @media only screen and (max-width:600px){
-.login__container{
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    width: 100%;
-}
-.footer{
-    align-items: flex-start;
-    flex-direction: column;
-}
-
-
-
- }
+@media only screen and (max-width:600px){
+  .login__container{
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      width: 100%;
+  }
+  .footer{
+      align-items: flex-start;
+      flex-direction: column;
+  }
+  
+  
+  
+   }
