--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ body {
   
 }
 .header {
-    background-color: #8f57fd;
+    background-color:transparent;
     width: 100%;
     height: 80px;
     display: flex;
@@ -57,3 +57,38 @@ body {
     margin: 0px;
     color: white;
   }
+  .footer{
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+    background-color: transparent;
+    
+}
+.footer a{
+    color: white;
+    cursor: pointer
+    
+    ;
+    font-size: 14px;
+    padding-left: 30px;
+    text-decoration: none;
+}
+.footer a:hover{
+    text-decoration:underline ;
+}
+@media only screen and (max-width:600px){
+  .login__container{
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      width: 100%;
+  }
+  .footer{
+      align-items: flex-start;
+      flex-direction: column;
+  }
+  
+  
+  
+   }
