--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,10 @@
 *{
     margin: 0vh;
 }
+body{
+    background-image: url('../img/universo-espacio-interestelar_1920x1080_xtrafondos.com.jpg');
+  }
 .login {
-    background: linear-gradient(#21C08B, #AB88FF);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -99,38 +101,9 @@ height: 50px;
 margin: 10px 0px;
 
 }
-.footer{
-    display: flex;
-    align-items: center;
-    height: 100px;
-    width: 100%;
-    background-color: #AB88FF;
-    
-}
-.footer a{
+.button a{
     color: white;
-    cursor: pointer
-    
-    ;
-    font-size: 14px;
-    padding-left: 30px;
     text-decoration: none;
 }
-.footer a:hover{
-    text-decoration:underline ;
-}
- @media only screen and (max-width:600px){
-.login__container{
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    width: 100%;
-}
-.footer{
-    align-items: flex-start;
-    flex-direction: column;
-}
 
-
-
- }
+ 
