--- a/css/register.css
+++ b/css/register.css
@@ -2,8 +2,11 @@
     margin:0;
     padding: 0;
 }
+body{
+  background-image: url('../img/universo-espacio-interestelar_1920x1080_xtrafondos.com.jpg');
+}
 .login {
-    background: linear-gradient(#21C08B, #AB88FF);
+  
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,7 +19,7 @@
     border: 2px solid white;
     border-radius: 40px;
     color: white;
-    padding:  0px 60px 68px 40px;
+    padding: 60px 68px 40px;
     min-height: 700px;
     width: 300px;
     display: flex;
@@ -100,38 +103,4 @@ height: 50px;
 margin: 10px 0px;
 
 }
-.footer{
-    display: flex;
-    align-items: center;
-    height: 120px;
-    width: 100%;
-    background-color: #AB88FF;
-    
-}
-.footer a{
-    color: white;
-    cursor: pointer
-    
-    ;
-    font-size: 14px;
-    padding-left: 30px;
-    text-decoration: none;
-}
-.footer a:hover{
-    text-decoration:underline ;
-}
-@media only screen and (max-width:600px){
-  .login__container{
-      background-color: transparent;
-      border: none;
-      padding: 0;
-      width: 100%;
-  }
-  .footer{
-      align-items: flex-start;
-      flex-direction: column;
-  }
-  
-  
-  
-   }
+
